// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Input Input 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Input
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Set to disabled
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 gKBZVE"
              disabled=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input set to required 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <form
      class="Form-sc-1qb2xtx-0 fKgcEj"
    >
      <h2
        class="Text-sc-15glbbx-0-h2 bbYEaw"
        font-size="heading2"
        font-weight="normal"
      >
        Required field example
      </h2>
      <div
        class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
      >
        <label
          class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
          color="black"
          style="display:block"
        >
          <div
            class="Box-xda4ls-0 biCpIl"
            data-testid="field-label"
          >
            <span
              class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
            >
              Label
            </span>
          </div>
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                aria-required="true"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
                required=""
              />
            </div>
          </div>
        </label>
      </div>
      <button
        class="Button__WrapperButton-hxfi59-0 kXvjuR PrimaryButton-sc-1btjl04-0 bLVAEH"
      >
        Send
      </button>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components/Input using ref to control focus 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Label
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
              id="my-own-id"
            />
          </div>
        </div>
      </label>
    </div>
    <button
      class="Button__WrapperButton-hxfi59-0 kXvjuR"
    >
      Focus the Input
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Input with a affix (prefix and suffix) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <form
      class="Form-sc-1qb2xtx-0 ifIAui"
      mb="x6"
    >
      <h2
        class="Text-sc-15glbbx-0-h2 bbYEaw"
        font-size="heading2"
        font-weight="normal"
      >
        Suffix
      </h2>
      <fieldset
        class="FormSection-v5comv-1 BOgOh"
      >
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
            <div
              class="Box-xda4ls-0 iDBEwK"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
            <div
              class="Box-xda4ls-0 iDBEwK"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-v5comv-1 gfZIXf"
      >
        <legend
          class="Text-sc-15glbbx-0-h3 FormSection__FormSectionTitle-v5comv-0 lRtmz"
          font-size="heading3"
          font-weight="medium"
        >
          With Custom Width
        </legend>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
            <div
              class="Box-xda4ls-0 bmVtbc"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
          </div>
        </div>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
            <div
              class="Box-xda4ls-0 bmVtbc"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="Form-sc-1qb2xtx-0 ifIAui"
      mb="x6"
    >
      <h2
        class="Text-sc-15glbbx-0-h2 bbYEaw"
        font-size="heading2"
        font-weight="normal"
      >
        Prefix
      </h2>
      <fieldset
        class="FormSection-v5comv-1 BOgOh"
      >
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bGCJLt"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bGCJLt"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-v5comv-1 gfZIXf"
      >
        <legend
          class="Text-sc-15glbbx-0-h3 FormSection__FormSectionTitle-v5comv-0 lRtmz"
          font-size="heading3"
          font-weight="medium"
        >
          With Custom Width
        </legend>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bYOXDj"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bYOXDj"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 gSNEe"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="FormSection-v5comv-1 gfZIXf"
      >
        <legend
          class="Text-sc-15glbbx-0-h3 FormSection__FormSectionTitle-v5comv-0 lRtmz"
          font-size="heading3"
          font-weight="medium"
        >
          With right alignment
        </legend>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bYOXDj"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 ezrLHS"
                color="currentColor"
                font-size="medium"
              >
                Eaches
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
        <div
          class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
        >
          <div
            class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
          >
            <div
              class="Box-xda4ls-0 bYOXDj"
              width="360px"
            >
              <p
                class="Text-sc-15glbbx-0 ezrLHS"
                color="currentColor"
                font-size="medium"
              >
                Pallets and boxes
              </p>
            </div>
            <div
              class="Box-xda4ls-0 erhvLv"
              display="flex"
            >
              <input
                aria-invalid="false"
                class="InputField__StyledInput-a97ghf-0 eSDvmh"
              />
            </div>
          </div>
        </div>
      </fieldset>
    </form>
    <form
      class="Form-sc-1qb2xtx-0 ifIAui"
      mb="x6"
    >
      <h2
        class="Text-sc-15glbbx-0-h2 bbYEaw"
        font-size="heading2"
        font-weight="normal"
      >
        Prefix and Suffix
      </h2>
      <div
        class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
      >
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 bGCJLt"
          >
            <p
              class="Text-sc-15glbbx-0 gSNEe"
              color="currentColor"
              font-size="medium"
            >
              Quantity
            </p>
          </div>
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
            />
          </div>
          <div
            class="Box-xda4ls-0 iDBEwK"
          >
            <p
              class="Text-sc-15glbbx-0 gSNEe"
              color="currentColor"
              font-size="medium"
            >
              Eaches
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components/Input with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Input
          </span>
          <span
            class="Text-sc-15glbbx-0 lfjkof"
            color="darkGrey"
            font-size="12px"
          >
            Required
          </span>
          <p
            class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
            color="currentColor"
            font-size="medium"
          >
            Additional help text
          </p>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="true"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
              placeholder="Placeholder"
              required=""
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input with custom ID 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Label
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
              id="my-own-id"
            />
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input with error list  1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Label
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="true"
              class="InputField__StyledInput-a97ghf-0 gAGDPa"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Error message
          </p>
          <ul
            class="List-sc-1ueqoqt-0 gtzCT"
            color="currentColor"
          >
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Input with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
    >
      <label
        class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
          >
            Label
          </span>
        </div>
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="true"
              class="InputField__StyledInput-a97ghf-0 gAGDPa"
            />
          </div>
        </div>
      </label>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Error message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
